  connectToHostImplementation() and disconnectFromHostImplementation() don't exist.

- QTcpServer::incomingConnection() now takes a qintptr instead of an int.

- QNetworkConfiguration::bearerName() removed, and bearerTypeName() should be used.

- QDir::convertSeparators() (deprecated since Qt 4.2) has been removed. Use
  QDir::toNativeSeparators() instead.

- qmake
  * several functions and built-in variables were modified to return normalized paths.

- QTextCodecPlugin has been removed since it is no longer used. All text codecs
  are now built into QtCore.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

Third party components
----------------------

-


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* drop a bogus QChar::NoCategory enum value; the proper QChar::Other_NotAssigned
  value is returned for an unassigned codepoints now.

* layoutAboutToBeChanged is no longer emitted by QAbstractItemModel::beginMoveRows.
  layoutChanged is no longer emitted by QAbstractItemModel::endMoveRows. Proxy models
  should now also connect to (and disconnect from) the rowsAboutToBeMoved and
  rowsMoved signals.

* The default value of the property QSortFilterProxyModel::dynamicSortFilter was
  changed from false to true.

* The signature of the virtual QAbstractItemView::dataChanged method has changed to