@@ -1,5 +1,4 @@
 DECL|macro|QICON_H
 DECL|variable|QIconEngine
-DECL|variable|QIconEngineV2
 DECL|variable|QIconPrivate
 DECL|variable|operator
