@@ -1,4 +1,2 @@
 DECL|function|QIconEnginePlugin
-DECL|function|QIconEnginePluginV2
 DECL|function|~QIconEnginePlugin
-DECL|function|~QIconEnginePluginV2
