@@ -1,4 +1,3 @@
-DECL|class|IconEngine
 DECL|class|tst_QIcon
 DECL|function|actualSize
 DECL|function|actualSize2
@@ -14,7 +13,6 @@ DECL|function|haveImageFormat
 DECL|function|isNull
 DECL|function|name
 DECL|function|operator <
-DECL|function|paint
 DECL|function|sizeLess
 DECL|function|streamAvailableSizes
 DECL|function|streamAvailableSizes_data
@@ -23,10 +21,6 @@ DECL|function|svgActualSize
 DECL|function|swap
 DECL|function|task184901_badCache
 DECL|function|task223279_inconsistentAddFile
-DECL|function|task239461_custom_iconengine_crash
 DECL|function|tst_QIcon
-DECL|function|~IconEngine
-DECL|member|destructorCalled
-DECL|member|destructorCalled
 DECL|member|staticIcon
 DECL|member|staticIcon
